# aind-large-scale-cellpose

./: .flake8  .gitignore  README.md  pyproject.toml
code/: execute_cells.py  run  run_capsule.py
code/aind_large_scale_cellpose/: __init__.py  segment.py  upscale_masks.py
code/aind_large_scale_cellpose/cellpose_segmentation/: __init__.py  combine_gradients.py  compute_flows.py  compute_masks.py  compute_percentiles.py  predict_gradients.py
code/aind_large_scale_cellpose/cellpose_segmentation/_shared/: types.py
code/aind_large_scale_cellpose/cellpose_segmentation/utils/: upscale_mask.py  utils.py
code/cell_segmentation/: __init__.py  segment.py
code/cell_segmentation/_shared/: __init__.py  types.py
code/cell_segmentation/cellpose_segmentation/: combine_gradients.py  compute_flows.py  compute_masks.py  compute_percentiles.py  predict_gradients.py
code/cell_segmentation/cellpose_segmentation/utils/: utils.py
code/cell_segmentation/utils/: utils.py
code/scripts/: execute_cells.py
environment/: Dockerfile
metadata/: metadata.yml
